Fix the footer bottom margin
We had a rule that made the last content card
have no margin bottom. This caused the footer
to snuggle up against the content too much.

- Add visually hidden to the submit values form
  in order to make it uneffected by the flow
  composition
- Change the content card margin rules to use
  margin-top. This is a temporary fix and will
  be changed when the footer-bottom utility is
  imported from the pattern library.

--- a/src/scss/pattern-library-compatibility/wrapper.scss
+++ b/src/scss/pattern-library-compatibility/wrapper.scss
@@ -7,6 +7,7 @@ body {
 
 .content-wrapper {
 	--wrapper-padding: 6px;
+	flex-grow: 1;
 
 	@include breakpoints.tablet-up {
 		--wrapper-padding: 18px;
